--- a/packages.yaml
+++ b/packages.yaml
@@ -70,6 +70,7 @@ windows:
   common:
     - "Git.Git"
     - "Bitwarden.CLI"
+    - "Tailscale.Tailscale"
   extras: # Installed if NOT 'server' role
     - "Neovim.Neovim"
     - "BurntSushi.ripgrep.MSVC"
