--- a/env.example
+++ b/env.example
@@ -1,6 +1,7 @@
-# Bitwarden Master Password (HIGH RISK)
+# Bitwarden Credentials (HIGH RISK)
 # Storing your master password in plain text is dangerous. 
 # Ensure this file is NEVER committed to Git.
+BW_EMAIL=your_email@example.com
 BW_PASSWORD=your_master_password_here
 
 # Optional: Bitwarden API Keys (If you use API key auth)
