feat: full automation via .env and secure cleanup

--- a/env.example
+++ b/env.example
@@ -1,9 +1,10 @@
-# Bitwarden Credentials (HIGH RISK)
-# Storing your master password in plain text is dangerous. 
-# Ensure this file is NEVER committed to Git.
+# Bitwarden Credentials (REQUIRED for automation)
 BW_EMAIL=your_email@example.com
 BW_PASSWORD=your_master_password_here
 
-# Optional: Bitwarden API Keys (If you use API key auth)
-# BW_CLIENTID=...
-# BW_CLIENTSECRET=...
+# Automated Setup Variables (OPTIONAL)
+# These will skip interactive prompts for Role, Hostname, etc.
+ROLE=centaur
+HOSTNAME=chiron
+USER_NAME="Your Name"
+EMAIL_ADDRESS="your_email@example.com"
