--- a/packages.yaml
+++ b/packages.yaml
@@ -77,7 +77,7 @@ windows:
     - "junegunn.fzf"
     - "Starship.Starship"
     - "ajeetdsouza.zoxide"
-    - "DEVCOM.JetBrainsMono"
+    - "JetBrains.JetBrainsMono"
   roles:
     centaur: # Formerly Commander (Chiron the Wise)
       - "Microsoft.VisualStudioCode"
