--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,106 @@
-# Enforce LF for all files to maintain consistency in Chezmoi
+# =============================================================================
+# Git Attributes for Dotfiles Repository
+# =============================================================================
+# Ensures consistent line endings across platforms (Windows, Linux, macOS)
+# Critical for Chezmoi templates and shell scripts
+
+# -----------------------------------------------------------------------------
+# Default: Auto-detect text files and normalize to LF
+# -----------------------------------------------------------------------------
 * text=auto eol=lf
 
-# Explicitly handle script files
+# -----------------------------------------------------------------------------
+# Shell Scripts (Unix/Linux/WSL)
+# -----------------------------------------------------------------------------
 *.sh text eol=lf
+*.bash text eol=lf
+*.zsh text eol=lf
+*.fish text eol=lf
+
+# -----------------------------------------------------------------------------
+# PowerShell Scripts (Windows)
+# -----------------------------------------------------------------------------
 *.ps1 text eol=crlf
+*.psm1 text eol=crlf
+*.psd1 text eol=crlf
 
-# Ensure templates are stored as LF
+# -----------------------------------------------------------------------------
+# Chezmoi Templates
+# -----------------------------------------------------------------------------
 *.tmpl text eol=lf
+.chezmoiignore text eol=lf
+.chezmoiremove text eol=lf
+.chezmoiversion text eol=lf
 
-# Binary files
+# -----------------------------------------------------------------------------
+# Configuration Files
+# -----------------------------------------------------------------------------
+*.yaml text eol=lf
+*.yml text eol=lf
+*.toml text eol=lf
+*.json text eol=lf
+*.conf text eol=lf
+*.config text eol=lf
+*.ini text eol=lf
+.editorconfig text eol=lf
+.gitignore text eol=lf
+.gitattributes text eol=lf
+
+# -----------------------------------------------------------------------------
+# Documentation
+# -----------------------------------------------------------------------------
+*.md text eol=lf
+*.txt text eol=lf
+LICENSE text eol=lf
+README text eol=lf
+
+# -----------------------------------------------------------------------------
+# SSH Config
+# -----------------------------------------------------------------------------
+**/ssh/config text eol=lf
+**/ssh/config.* text eol=lf
+authorized_keys text eol=lf
+known_hosts text eol=lf
+
+# -----------------------------------------------------------------------------
+# Binary Files (No line ending conversion)
+# -----------------------------------------------------------------------------
 *.png binary
 *.jpg binary
+*.jpeg binary
+*.gif binary
 *.ico binary
+*.svg binary
+*.pdf binary
+*.zip binary
+*.tar binary
+*.gz binary
+*.bz2 binary
+*.7z binary
+*.ttf binary
+*.otf binary
+*.woff binary
+*.woff2 binary
+*.eot binary
+
+# -----------------------------------------------------------------------------
+# Linguist Overrides (GitHub language detection)
+# -----------------------------------------------------------------------------
+*.tmpl linguist-language=Go-Template
+*.ps1 linguist-language=PowerShell
+*.sh linguist-language=Shell
+
+# -----------------------------------------------------------------------------
+# Git LFS (Large File Storage) - if needed
+# -----------------------------------------------------------------------------
+# *.zip filter=lfs diff=lfs merge=lfs -text
+# *.tar.gz filter=lfs diff=lfs merge=lfs -text
+
+# -----------------------------------------------------------------------------
+# Export Ignore (files not included in git archive)
+# -----------------------------------------------------------------------------
+.gitattributes export-ignore
+.gitignore export-ignore
+.github export-ignore
+*.bak export-ignore
+*.tmp export-ignore
